--- a/deploy/central-tx-austin-102/ngsa/demo/ngsa/ngsa.yaml
+++ b/deploy/central-tx-austin-102/ngsa/demo/ngsa/ngsa.yaml
@@ -19,8 +19,8 @@ spec:
     metadata:
       labels:
         app: ngsa
-        version: beta-0212-0936
-        deploy: 22-02-12-09-36-27
+        version: beta-0212-0952
+        deploy: 22-02-12-09-52-03
     spec:
       containers:
         - name: app
@@ -65,7 +65,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`central`)
+    - match: Host(`central-tx-austin-102.cseretail.com`)
       kind: Rule
       services:
         - name: ngsa
