--- a/deploy/central-tx-austin-104/tinybench/demo/tinybench/tinybench.yaml
+++ b/deploy/central-tx-austin-104/tinybench/demo/tinybench/tinybench.yaml
@@ -19,8 +19,8 @@ spec:
     metadata:
       labels:
         app: tinybench
-        version: beta-2202-12-23
-        deploy: 22-02-12-23-58-03
+        version: beta-2202-13-00
+        deploy: 22-02-13-00-23-54
     spec:
       containers:
         - name: app
@@ -56,7 +56,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`central-tx-austin-104.cseretail.com`) && PathPrefix('/tinybench/')
+    - match: Host(`central-tx-austin-104.cseretail.com`) && PathPrefix(`/tinybench/`)
       kind: Rule
       services:
         - name: tinybench
@@ -75,7 +75,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`central-tx-austin-104.cseretail.com`) && PathPrefix('/tinybench/')
+    - match: Host(`central-tx-austin-104.cseretail.com`) && PathPrefix(`/tinybench/`)
       kind: Rule
       services:
         - name: tinybench
