--- a/deploy/west-wa-seattle-102/tinybench/demo/tinybench/tinybench.yaml
+++ b/deploy/west-wa-seattle-102/tinybench/demo/tinybench/tinybench.yaml
@@ -19,8 +19,8 @@ spec:
     metadata:
       labels:
         app: tinybench
-        version: beta-2202-13-04
-        deploy: 22-02-13-04-30-10
+        version: beta-2202-13-05
+        deploy: 22-02-13-05-04-04
     spec:
       containers:
         - name: app
@@ -57,7 +57,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`central-tx-austin-103.cseretail.com`) && PathPrefix(`/tinybench/`)
+    - match: Host(`west-wa-seattle-102.cseretail.com`) && PathPrefix(`/tinybench/`)
       kind: Rule
       services:
         - name: tinybench
@@ -77,7 +77,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`central-tx-austin-103.cseretail.com`) && PathPrefix(`/tinybench/`)
+    - match: Host(`west-wa-seattle-102.cseretail.com`) && PathPrefix(`/tinybench/`)
       kind: Rule
       services:
         - name: tinybench
