added bartr test targets

--- a/deploy/bartr-central/tinybench/demo/tinybench/tinybench.yaml
+++ b/deploy/bartr-central/tinybench/demo/tinybench/tinybench.yaml
@@ -57,7 +57,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`bartr-101.cseretail.com`) && PathPrefix(`/tinybench/`)
+    - match: Host(`bartr-central.cseretail.com`) && PathPrefix(`/tinybench/`)
       kind: Rule
       services:
         - name: tinybench
