--- a/deploy/corp-monitoring-101/webv/demo/webv/webv.yaml
+++ b/deploy/corp-monitoring-101/webv/demo/webv/webv.yaml
@@ -20,7 +20,7 @@ spec:
       labels:
         app: webv
         version: beta-2202-15-21
-        deploy: deploy-22-02-15-21-01-52
+        deploy: deploy-22-02-15-21-15-30
     spec:
       containers:
         - name: app
@@ -56,7 +56,7 @@ spec:
           - -u
           - https://raw.githubusercontent.com/bartr/tinybench/main/webv/
           - -f
-          - load.json
+          - tinybench.json
           - --zone
           - corp-monitoring
           - --region
