--- a/deploy/bartr-east/webv/demo/webv/webv.yaml
+++ b/deploy/bartr-east/webv/demo/webv/webv.yaml
@@ -20,7 +20,7 @@ spec:
       labels:
         app: webv
         version: beta-2202-15-21
-        deploy: deploy-22-02-15-21-15-30
+        deploy: deploy-22-02-15-21-17-33
     spec:
       containers:
         - name: app
@@ -56,7 +56,7 @@ spec:
           - -u
           - https://raw.githubusercontent.com/bartr/tinybench/main/webv/
           - -f
-          - tinybench.json
+          - load.json
           - --zone
           - bartr-east
           - --region
