--- a/deploy/central-tx-austin-102/tinybench/demo/tinybench/tinybench.yaml
+++ b/deploy/central-tx-austin-102/tinybench/demo/tinybench/tinybench.yaml
@@ -19,8 +19,8 @@ spec:
     metadata:
       labels:
         app: tinybench
-        version: beta-2202-16-20
-        deploy: deploy-22-02-16-20-23-56
+        version: beta-2202-16-21
+        deploy: deploy-22-02-16-21-32-52
     spec:
       containers:
         - name: app
@@ -30,6 +30,9 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+          args:
+          - -u
+          - /heartbeat
 
 ---
 apiVersion: v1
@@ -57,7 +60,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`central-tx-austin-102.cseretail.com`) && PathPrefix(`/tinybench/`)
+    - match: Host(`central-tx-austin-102.cseretail.com`) && PathPrefix(`/heartbeat/`)
       kind: Rule
       services:
         - name: tinybench
