--- a/deploy/west-wa-seattle-101/tinybench/demo/tinybench/tinybench.yaml
+++ b/deploy/west-wa-seattle-101/tinybench/demo/tinybench/tinybench.yaml
@@ -60,7 +60,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`bartr-central.cseretail.com`) && PathPrefix(`/heartbeat/`)
+    - match: Host(`west-wa-seattle-101.cseretail.com`) && PathPrefix(`/heartbeat/`)
       kind: Rule
       services:
         - name: tinybench
