--- a/deploy/bartr-central/webv/demo/webv/webv.yaml
+++ b/deploy/bartr-central/webv/demo/webv/webv.yaml
@@ -19,8 +19,8 @@ spec:
     metadata:
       labels:
         app: webv
-        version: beta-2202-17-05
-        deploy: deploy-22-02-17-05-32-06
+        version: beta-2202-17-12
+        deploy: deploy-22-02-17-12-34-28
     spec:
       containers:
         - name: app
@@ -54,9 +54,9 @@ spec:
           - https://west-ca-sd-101.cseretail.com
           - https://west-ca-sd-102.cseretail.com
           - -u
-          - https://raw.githubusercontent.com/retaildevcrews/red-webv/main/webvtest-temp/
+          - https://raw.githubusercontent.com/retaildevcrews/akdc/main/red-vms/webv/
           - -f
-          - load.json
+          - benchmark.json
           - --zone
           - bartr-central
           - --region
