--- a/deploy/corp-monitoring-101/fluent-bit/demo/fluent-bit/fluent-bit.yaml
+++ b/deploy/corp-monitoring-101/fluent-bit/demo/fluent-bit/fluent-bit.yaml
@@ -9,6 +9,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluent-bit
+  namespace: fluent-bit
 rules:
 - apiGroups: [ "" ]
   resources:
@@ -24,6 +25,7 @@ kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluent-bit
+  namespace: fluent-bit
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
