--- a/deploy/corp-monitoring-101/webv/demo/webv/webv.yaml
+++ b/deploy/corp-monitoring-101/webv/demo/webv/webv.yaml
@@ -58,7 +58,7 @@ spec:
           - -f
           - benchmark.json
           - --zone
-          - bartr-central
+          - corp-monitoring
           - --region
           - corp
           - --log-format 
