--- a/deploy/corp-monitoring-101/tinybench/demo/tinybench/tinybench.yaml
+++ b/deploy/corp-monitoring-101/tinybench/demo/tinybench/tinybench.yaml
@@ -60,7 +60,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`central-tx-austin-101.cseretail.com`) && PathPrefix(`/heartbeat/`)
+    - match: Host(`corp-monitoring-101.cseretail.com`) && PathPrefix(`/heartbeat/`)
       kind: Rule
       services:
         - name: tinybench
