--- a/deploy/bartr-east/webv/demo/webv/webv.yaml
+++ b/deploy/bartr-east/webv/demo/webv/webv.yaml
@@ -20,11 +20,11 @@ spec:
       labels:
         app: webv
         version: beta-2202-17-18
-        deploy: deploy-22-02-17-18-33-24
+        deploy: deploy-22-02-17-18-50-34
     spec:
       containers:
         - name: app
-          image: ghcr.io/cse-labs/webvalidate:beta
+          image: ghcr.io/cse-labs/webvalidate:latest
           imagePullPolicy: Always
           ports:
             - name: http
