--- a/deploy/west-wa-redmond-101/webv/demo/webv/webv.yaml
+++ b/deploy/west-wa-redmond-101/webv/demo/webv/webv.yaml
@@ -58,9 +58,9 @@ spec:
           - -f
           - benchmark.json
           - --zone
-          - bartr-east
+          - west-wa-redmond
           - --region
-          - corp
+          - west
           - --log-format 
           - Json
 ---
