--- a/deploy/corp-monitoring-101/fluent-bit/demo/fluent-bit/fluent-bit.yaml
+++ b/deploy/corp-monitoring-101/fluent-bit/demo/fluent-bit/fluent-bit.yaml
@@ -6,7 +6,7 @@ metadata:
 ---
 
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluent-bit
   namespace: fluent-bit
@@ -22,7 +22,7 @@ rules:
 ---
 
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: fluent-bit
   namespace: fluent-bit
