--- a/apps/bartr-central/webv/demo/webv/webv-ngsa.yaml
+++ b/apps/bartr-central/webv/demo/webv/webv-ngsa.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webv
+  name: webv-ngsa
   namespace: webv
   labels:
-    app.kubernetes.io/name: webv
+    app.kubernetes.io/name: webv-ngsa
 spec:
   replicas: 1
   strategy:
@@ -14,11 +14,11 @@ spec:
        maxUnavailable: 1
   selector:
     matchLabels:
-      app: webv
+      app: webv-ngsa
   template:
     metadata:
       labels:
-        app: webv
+        app: webv-ngsa
     spec:
       containers:
         - name: app
@@ -47,28 +47,28 @@ spec:
           - https://central-mo-kc-102.cseretail.com
           - https://east-ga-atlanta-101.cseretail.com
           - https://east-ga-atlanta-102.cseretail.com
+          - https://east-nc-raleigh-101.cseretail.com
+          - https://east-nc-raleigh-102.cseretail.com
           - https://west-wa-seattle-101.cseretail.com
           - https://west-wa-seattle-102.cseretail.com
           - https://west-ca-sd-101.cseretail.com
           - https://west-ca-sd-102.cseretail.com
-          - -u
-          - https://raw.githubusercontent.com/retaildevcrews/akdc/main/red-vms/webv/
           - -f
           - benchmark.json
           - --zone
-          - west-wa-redmond
+          - bartr-central
           - --region
-          - west
+          - corp
           - --log-format 
           - Json
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: webv
+  name: webv-ngsa
   namespace: webv
   labels:
-    app: webv
+    app: webv-ngsa
 spec:
   type: ClusterIP
   ports:
@@ -77,4 +77,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: webv
+    app: webv-ngsa
