--- a/apps/corp-monitoring-101/webv/demo/webv/webv-heartbeat.yaml
+++ b/apps/corp-monitoring-101/webv/demo/webv/webv-heartbeat.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webv
+  name: webv-heartbeat
   namespace: webv
   labels:
-    app.kubernetes.io/name: webv
+    app.kubernetes.io/name: webv-heartbeat
 spec:
   replicas: 1
   strategy:
@@ -14,11 +14,11 @@ spec:
        maxUnavailable: 1
   selector:
     matchLabels:
-      app: webv
+      app: webv-heartbeat
   template:
     metadata:
       labels:
-        app: webv
+        app: webv-heartbeat
     spec:
       containers:
         - name: app
@@ -47,6 +47,8 @@ spec:
           - https://central-mo-kc-102.cseretail.com
           - https://east-ga-atlanta-101.cseretail.com
           - https://east-ga-atlanta-102.cseretail.com
+          - https://east-nc-raleigh-101.cseretail.com
+          - https://east-nc-raleigh-102.cseretail.com
           - https://west-wa-seattle-101.cseretail.com
           - https://west-wa-seattle-102.cseretail.com
           - https://west-ca-sd-101.cseretail.com
@@ -56,7 +58,7 @@ spec:
           - -f
           - benchmark.json
           - --zone
-          - bartr-east
+          - corp-monitoring
           - --region
           - corp
           - --log-format 
@@ -65,10 +67,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: webv
+  name: webv-heartbeat
   namespace: webv
   labels:
-    app: webv
+    app: webv-heartbeat
 spec:
   type: ClusterIP
   ports:
@@ -77,4 +79,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: webv
+    app: webv-heartbeat
