--- a/apps/bartr-east/webv/demo/webv/webv.yaml
+++ b/apps/bartr-east/webv/demo/webv/webv.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webv-heartbeat
+  name: webv
   namespace: webv
   labels:
-    app.kubernetes.io/name: webv-heartbeat
+    app.kubernetes.io/name: webv
 spec:
   replicas: 1
   strategy:
@@ -14,11 +14,11 @@ spec:
        maxUnavailable: 1
   selector:
     matchLabels:
-      app: webv-heartbeat
+      app: webv
   template:
     metadata:
       labels:
-        app: webv-heartbeat
+        app: webv
     spec:
       containers:
         - name: app
@@ -67,10 +67,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: webv-heartbeat
+  name: webv
   namespace: webv
   labels:
-    app: webv-heartbeat
+    app: webv
 spec:
   type: ClusterIP
   ports:
@@ -79,4 +79,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: webv-heartbeat
+    app: webv
