--- a/apps/corp-monitoring-101/prometheus/demo/prometheus/prometheus.yaml
+++ b/apps/corp-monitoring-101/prometheus/demo/prometheus/prometheus.yaml
@@ -3,6 +3,7 @@ kind: ServiceAccount
 metadata:
   name: prometheus
   namespace: prometheus
+
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
@@ -25,6 +26,7 @@ rules:
   verbs: ["get", "list", "watch"]
 - nonResourceURLs: ["/metrics"]
   verbs: ["get"]
+
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
@@ -39,6 +41,7 @@ subjects:
 - kind: ServiceAccount
   name: prometheus
   namespace: prometheus
+
 ---
 
 apiVersion: v1
@@ -74,12 +77,16 @@ data:
         username: 261866
         password_file: /etc/prometheus/secrets/password
     scrape_configs:
-      - job_name: 'webv'
+      - job_name: 'webv-heartbeat'
         static_configs:
-          - targets: [ 'webv.webv.svc.cluster.local:8080' ]
+          - targets: [ 'webv-heartbeat.webv.svc.cluster.local:8080' ]
+      - job_name: 'webv-ngsa'
+        static_configs:
+          - targets: [ 'webv-ngsa.webv.svc.cluster.local:8080' ]
       - job_name: 'ngsa'
         static_configs:
           - targets: [ 'ngsa.ngsa.svc.cluster.local:8080' ]
+
 ---
 
 apiVersion: apps/v1
@@ -134,6 +141,7 @@ spec:
   
         - name: prometheus-storage-volume
           emptyDir: {}
+
 ---
 
 apiVersion: v1
