--- a/apps/central-tx-austin-101/ngsa/demo/ngsa/ngsa.yaml
+++ b/apps/central-tx-austin-101/ngsa/demo/ngsa/ngsa.yaml
@@ -35,6 +35,10 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+          resources:
+            limits:
+              cpu: 500m
+              memory: 512Mi
 
 ---
 apiVersion: v1
