--- a/apps/corp-monitoring-101/prometheus/demo/prometheus/prometheus.yaml
+++ b/apps/corp-monitoring-101/prometheus/demo/prometheus/prometheus.yaml
@@ -120,7 +120,7 @@ spec:
               cpu: 250m
               memory: 250M
             limits:
-              cpu: 1
+              cpu: 500M
               memory: 500M
           volumeMounts:
             - name: prometheus-config-volume
