--- a/bootstrap/corp-monitoring-101/heartbeat/demo/heartbeat/heartbeat.yaml
+++ b/bootstrap/corp-monitoring-101/heartbeat/demo/heartbeat/heartbeat.yaml
@@ -24,6 +24,10 @@ spec:
         - name: app
           image: ghcr.io/bartr/tinybench:latest
           imagePullPolicy: Always
+          resources:
+            limits:
+              cpu: 200m
+              memory: 64Mi
           ports:
             - name: http
               containerPort: 8080
