--- a/apps/corp-monitoring-101/fluent-bit/demo/fluent-bit/fluent-bit.yaml
+++ b/apps/corp-monitoring-101/fluent-bit/demo/fluent-bit/fluent-bit.yaml
@@ -78,7 +78,16 @@ data:
     [INPUT]
         Name              tail
         Tag               kube.*
-        Path              /var/log/containers/*.log
+        Path              /var/log/containers/webv/*.log
+        Parser            cri
+        DB                /var/log/flb_kube.db
+        Mem_Buf_Limit     5MB
+        Skip_Long_Lines   Off
+        Refresh_Interval  10
+    [INPUT]
+        Name              tail
+        Tag               kube.*
+        Path              /var/log/containers/ngsa/*.log
         Parser            cri
         DB                /var/log/flb_kube.db
         Mem_Buf_Limit     5MB
