--- a/apps/corp-monitoring/webv/demo/webv/ngsa.yaml
+++ b/apps/corp-monitoring/webv/demo/webv/ngsa.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: ghcr.io/cse-labs/webvalidate:beta
+          image: ghcr.io/cse-labs/webv-red:latest
           imagePullPolicy: Always
           ports:
             - name: http
@@ -49,7 +49,7 @@ spec:
           - https://east-nc-raleigh-101.cseretail.com
           - https://east-nc-raleigh-102.cseretail.com
           - --files
-          - benchmark.json
+          - ngsa-benchmark.json
           - --zone
           - corp-monitoring
           - --region
