--- a/apps/west-wa-redmond-102/aioa-beta/demo/ai-order-accuracy-beta/aioa-beta.yaml
+++ b/apps/west-wa-redmond-102/aioa-beta/demo/ai-order-accuracy-beta/aioa-beta.yaml
@@ -19,6 +19,7 @@ spec:
     metadata:
       labels:
         app: ai-order-accuracy-beta
+        deploy: deploy-22-02-28-00-21-49
     spec:
       containers:
         - name: app
