--- a/.github/workflows/gitops.yaml
+++ b/.github/workflows/gitops.yaml
@@ -9,7 +9,7 @@ on:
     paths:
     - '.github/workflows/gitops.yaml'
     - 'autogitops/**'
-    - 'src/**'
+    - 'apps/**'
 
 jobs:
 
@@ -29,6 +29,5 @@ jobs:
         --name ago \
         --rm \
         -v $(pwd):/ago \
-        ghcr.io/bartr/autogitops:beta \
-        -r /retaildevcrews/red-gitops \
-        -p ${{ secrets.GHCR_PAT }}
+        ghcr.io/bartr/autogitops:beta
+
