--- a/apps/prometheus/autogitops/demo/prometheus.yaml
+++ b/apps/prometheus/autogitops/demo/prometheus.yaml
@@ -80,9 +80,18 @@ data:
       - job_name: 'webv-heartbeat'
         static_configs:
           - targets: [ 'webv-heartbeat.webv.svc.cluster.local:8080' ]
+        metric_relabel_configs:
+        - source_labels: [ __name__ ]
+          regex: (WebVDuration_bucket|WebVDuration_sum|WebVSummary_sum)
+          action: drop
       - job_name: 'webv-aioa'
         static_configs:
           - targets: [ 'webv-aioa.webv.svc.cluster.local:8080' ]
+        metric_relabel_configs:
+        - source_labels: [ __name__ ]
+          regex: (WebVDuration_bucket|WebVDuration_sum|WebVSummary_sum)
+          action: drop
+
 ---
 
 apiVersion: apps/v1
