--- a/apps/ai-order-accuracy/autogitops/demo/aioa.yaml
+++ b/apps/ai-order-accuracy/autogitops/demo/aioa.yaml
@@ -26,6 +26,7 @@ spec:
           imagePullPolicy: Always
           args: 
           - --in-memory
+          - --prometheus
           - --zone
           - {{gitops.config.zone}}
           - --region
