--- a/apps/heartbeat/autogitops/demo/heartbeat.yaml
+++ b/apps/heartbeat/autogitops/demo/heartbeat.yaml
@@ -37,7 +37,7 @@ spec:
             failureThreshold: 60
             periodSeconds: 2
             httpGet:
-              path: /healthz
+              path: /readyz
               port: 8080
           livenessProbe:
             initialDelaySeconds: 60
