--- a/apps/webv/autogitops/demo/heartbeat.yaml
+++ b/apps/webv/autogitops/demo/heartbeat.yaml
@@ -37,7 +37,7 @@ spec:
             periodSeconds: 60
           startupProbe:
             httpGet:
-              path: /healthz
+              path: /readyz
               port: http
             initialDelaySeconds: 5
             failureThreshold: 60
